# fdx-natives

./: .gitignore  AGENTS.md  README.md  build.gradle.kts  fdx-natives-lock.json  fdx-natives.toml  settings.gradle.kts
.github/workflows/: release.yml
native/: CMakeLists.txt  fdx-natives-targets.cmake.in
smoke/: CMakeLists.txt  smoke.cpp
