cmake_minimum_required(VERSION 3.22)
project(fdx_natives_deps LANGUAGES C CXX)

if(NOT DEFINED FDX_NATIVES_FREETYPE_SOURCE_DIR)
    message(FATAL_ERROR "FDX_NATIVES_FREETYPE_SOURCE_DIR is required")
endif()
if(NOT DEFINED FDX_NATIVES_DAWN_SOURCE_DIR)
    message(FATAL_ERROR "FDX_NATIVES_DAWN_SOURCE_DIR is required")
endif()
if(NOT DEFINED FDX_NATIVES_STAGE_DIR)
    message(FATAL_ERROR "FDX_NATIVES_STAGE_DIR is required")
endif()

file(TO_CMAKE_PATH "${FDX_NATIVES_FREETYPE_SOURCE_DIR}" FDX_NATIVES_FREETYPE_SOURCE_DIR)
file(TO_CMAKE_PATH "${FDX_NATIVES_DAWN_SOURCE_DIR}" FDX_NATIVES_DAWN_SOURCE_DIR)
file(TO_CMAKE_PATH "${FDX_NATIVES_STAGE_DIR}" FDX_NATIVES_STAGE_DIR)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

if(ANDROID)
    add_compile_options("$<$<CONFIG:Release>:-g0>")
endif()

set(FDX_NATIVES_ARCHIVE_DIR "${CMAKE_BINARY_DIR}/fdx-natives-lib")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${FDX_NATIVES_ARCHIVE_DIR}")
foreach(CONFIG DEBUG RELEASE RELWITHDEBINFO MINSIZEREL)
    set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_${CONFIG} "${FDX_NATIVES_ARCHIVE_DIR}")
endforeach()

if(EMSCRIPTEN)
    set(CMAKE_C_FLAGS_RELEASE "-O0 -DNDEBUG" CACHE STRING "" FORCE)
    set(CMAKE_CXX_FLAGS_RELEASE "-O0 -DNDEBUG" CACHE STRING "" FORCE)
endif()

set(FT_DISABLE_ZLIB ON CACHE BOOL "" FORCE)
set(FT_DISABLE_BZIP2 ON CACHE BOOL "" FORCE)
set(FT_DISABLE_PNG ON CACHE BOOL "" FORCE)
set(FT_DISABLE_HARFBUZZ ON CACHE BOOL "" FORCE)
set(FT_DISABLE_BROTLI ON CACHE BOOL "" FORCE)
add_subdirectory("${FDX_NATIVES_FREETYPE_SOURCE_DIR}" freetype-build EXCLUDE_FROM_ALL)
set_target_properties(freetype PROPERTIES OUTPUT_NAME "fdx_freetype")

set(FDX_DAWN_THIRD_PARTY_DIR "${FDX_NATIVES_DAWN_SOURCE_DIR}/third_party")
set(DAWN_BUILD_SAMPLES OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_NODE_BINDINGS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_FUZZERS OFF CACHE BOOL "" FORCE)
set(DAWN_BUILD_MONOLITHIC_LIBRARY OFF CACHE STRING "" FORCE)
set(DAWN_BUILD_PROTOBUF OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_INSTALL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_RTTI OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_D3D11 OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_D3D12 OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_DESKTOP_GL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_METAL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_NULL OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_OPENGLES OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_SPIRV_VALIDATION OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_SWIFTSHADER OFF CACHE BOOL "" FORCE)
set(DAWN_ENABLE_VULKAN OFF CACHE BOOL "" FORCE)
set(DAWN_USE_GLFW OFF CACHE BOOL "" FORCE)
set(DAWN_USE_WAYLAND OFF CACHE BOOL "" FORCE)
set(DAWN_USE_WINDOWS_UI OFF CACHE BOOL "" FORCE)
set(DAWN_USE_X11 OFF CACHE BOOL "" FORCE)
set(DAWN_FETCH_DEPENDENCIES ON CACHE BOOL "" FORCE)
set(DAWN_SUPPORTS_CXX_MODULES OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_BENCHMARKS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_CMD_TOOLS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_FUZZERS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_GLSL_VALIDATOR OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_GLSL_WRITER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_HLSL_WRITER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_IR_BINARY OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_MSL_WRITER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_NULL_WRITER OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_SPV_READER OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_SPV_WRITER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_TESTS OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_TINTD OFF CACHE BOOL "" FORCE)
set(TINT_BUILD_WGSL_READER ON CACHE BOOL "" FORCE)
set(TINT_BUILD_WGSL_WRITER ON CACHE BOOL "" FORCE)
set(TINT_ENABLE_IR_DUMPING OFF CACHE BOOL "" FORCE)
set(TINT_ENABLE_IR_VALIDATION_ASSERTS OFF CACHE BOOL "" FORCE)
set(DAWN_THIRD_PARTY_DIR "${FDX_DAWN_THIRD_PARTY_DIR}" CACHE STRING "" FORCE)
set(DAWN_ABSEIL_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/abseil-cpp" CACHE STRING "" FORCE)
set(DAWN_EGL_REGISTRY_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/EGL-Registry/src" CACHE STRING "" FORCE)
set(DAWN_EMDAWNWEBGPU_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/emdawnwebgpu" CACHE STRING "" FORCE)
set(DAWN_GENERATOR_DIR "${FDX_NATIVES_DAWN_SOURCE_DIR}/generator" CACHE PATH "" FORCE)
set(DAWN_GLFW_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/glfw3/src" CACHE STRING "" FORCE)
set(DAWN_GLSLANG_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/glslang/src" CACHE STRING "" FORCE)
set(DAWN_GOOGLETEST_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/googletest" CACHE STRING "" FORCE)
set(DAWN_INCLUDE_DIR "${FDX_NATIVES_DAWN_SOURCE_DIR}/include" CACHE PATH "" FORCE)
set(DAWN_JINJA2_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/jinja2" CACHE STRING "" FORCE)
set(DAWN_KHRONOS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/khronos" CACHE STRING "" FORCE)
set(DAWN_LPM_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/libprotobuf-mutator/src" CACHE STRING "" FORCE)
set(DAWN_MARKUPSAFE_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/markupsafe" CACHE STRING "" FORCE)
set(DAWN_OPENGL_REGISTRY_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/OpenGL-Registry/src" CACHE STRING "" FORCE)
set(DAWN_PROTOBUF_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/protobuf" CACHE STRING "" FORCE)
set(DAWN_SPIRV_HEADERS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/spirv-headers/src" CACHE STRING "" FORCE)
set(DAWN_SPIRV_TOOLS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/spirv-tools/src" CACHE STRING "" FORCE)
set(DAWN_SRC_DIR "${FDX_NATIVES_DAWN_SOURCE_DIR}/src" CACHE PATH "" FORCE)
set(DAWN_SWIFTSHADER_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/swiftshader" CACHE STRING "" FORCE)
set(DAWN_TEMPLATE_DIR "${FDX_NATIVES_DAWN_SOURCE_DIR}/generator/templates" CACHE PATH "" FORCE)
set(DAWN_VULKAN_HEADERS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/vulkan-headers/src" CACHE STRING "" FORCE)
set(DAWN_VULKAN_LOADER_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/vulkan-loader/src" CACHE STRING "" FORCE)
set(DAWN_VULKAN_UTILITY_LIBRARIES_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/vulkan-utility-libraries/src" CACHE STRING "" FORCE)
set(DAWN_WEBGPU_HEADERS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/webgpu-headers/src" CACHE STRING "" FORCE)
set(NODE_ADDON_API_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/node-addon-api" CACHE STRING "" FORCE)
set(NODE_API_HEADERS_DIR "${FDX_DAWN_THIRD_PARTY_DIR}/node-api-headers" CACHE STRING "" FORCE)
set(WEBGPU_IDL_PATH "${FDX_DAWN_THIRD_PARTY_DIR}/gpuweb/webgpu.idl" CACHE STRING "" FORCE)

add_subdirectory("${FDX_NATIVES_DAWN_SOURCE_DIR}" dawn EXCLUDE_FROM_ALL)

if(EMSCRIPTEN AND NOT TARGET SPIRV-Headers)
    set(SPIRV_HEADERS_SKIP_EXAMPLES ON CACHE BOOL "" FORCE)
    set(SPIRV_HEADERS_SKIP_INSTALL ON CACHE BOOL "" FORCE)
    add_subdirectory("${FDX_NATIVES_DAWN_SOURCE_DIR}/third_party/spirv-headers/src"
        "${CMAKE_CURRENT_BINARY_DIR}/libfdx_spirv_headers" EXCLUDE_FROM_ALL)
endif()

set(FDX_NATIVES_REQUIRED_TARGETS
    freetype
    libtint
    tint_api_helpers
    tint_lang_core_ir_transform
    tint_lang_glsl_writer_helpers)

set(FDX_NATIVES_TARGETS_FILE "${FDX_NATIVES_STAGE_DIR}/cmake/fdx-natives-targets.cmake")
configure_file(
    "${CMAKE_CURRENT_SOURCE_DIR}/fdx-natives-targets.cmake.in"
    "${CMAKE_CURRENT_BINARY_DIR}/fdx-natives-targets.cmake"
    @ONLY)

add_custom_target(stage_fdx_natives
    COMMAND "${CMAKE_COMMAND}" -E rm -rf "${FDX_NATIVES_STAGE_DIR}"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/lib"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/include/freetype2"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/include/dawn"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/include/dawn/src"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/include/dawn-gen"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${FDX_NATIVES_STAGE_DIR}/cmake"
    COMMAND "${CMAKE_COMMAND}" -E make_directory "${CMAKE_BINARY_DIR}/gen"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${FDX_NATIVES_ARCHIVE_DIR}" "${FDX_NATIVES_STAGE_DIR}/lib"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${FDX_NATIVES_FREETYPE_SOURCE_DIR}/include" "${FDX_NATIVES_STAGE_DIR}/include/freetype2"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${FDX_NATIVES_DAWN_SOURCE_DIR}/include" "${FDX_NATIVES_STAGE_DIR}/include/dawn/include"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${FDX_NATIVES_DAWN_SOURCE_DIR}/src/tint" "${FDX_NATIVES_STAGE_DIR}/include/dawn/src/tint"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${FDX_NATIVES_DAWN_SOURCE_DIR}/src/utils" "${FDX_NATIVES_STAGE_DIR}/include/dawn/src/utils"
    COMMAND "${CMAKE_COMMAND}" -E copy_directory "${CMAKE_BINARY_DIR}/gen" "${FDX_NATIVES_STAGE_DIR}/include/dawn-gen"
    COMMAND "${CMAKE_COMMAND}" -E copy "${CMAKE_CURRENT_BINARY_DIR}/fdx-natives-targets.cmake" "${FDX_NATIVES_TARGETS_FILE}"
    DEPENDS ${FDX_NATIVES_REQUIRED_TARGETS}
    COMMENT "Staging fdx-natives static libraries and import targets")
